1.5.7.dev0
 * #327: Fix broken pass-through of BORG_* environment variables to Borg.
 * #331: Add SSL support to PostgreSQL database configuration.
 * #333: Fix for potential data loss (data not getting backed up) when borgmatic omitted configured
   source directories in certain situations. Specifically, this occurred when two source directories
   on different filesystems were related by parentage (e.g. "/foo" and "/foo/bar/baz") and the
   one_file_system option was enabled.
 * Update documentation code fragments theme to better match the rest of the page.
 * Improve configuration reference documentation readability via more aggressive word-wrapping in
   configuration schema descriptions.

1.5.6
 * #292: Allow before_backup and similiar hooks to exit with a soft failure without altering the
   monitoring status on Healthchecks or other providers. Support this by waiting to ping monitoring
   services with a "start" status until after before_* hooks finish. Failures in before_* hooks
   still trigger a monitoring "fail" status.
 * #316: Fix hang when a stale database dump named pipe from an aborted borgmatic run remains on
   disk.
 * #323: Fix for certain configuration options like ssh_command impacting Borg invocations for
   separate configuration files.
 * #324: Add "borgmatic extract --strip-components" flag to remove leading path components when
   extracting an archive.
 * Tweak comment indentation in generated configuration file for clarity.
 * Link to Borgmacator GNOME AppIndicator from monitoring documentation.

1.5.5
 * #314: Fix regression in support for PostgreSQL's "directory" dump format. Unlike other dump
   formats, the "directory" dump format does not stream directly to/from Borg.
 * #315: Fix enabled database hooks to implicitly set one_file_system configuration option to true.
   This prevents Borg from reading devices like /dev/zero and hanging.